00-master-node/05-whisker-expose/02-allow-all-to-whisker.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-to-whisker
  namespace: calico-system
spec:
  podSelector:
    matchLabels:
      k8s-app: whisker
  ingress:
  - {}
  policyTypes:
  - Ingress
